<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".activity.ViewQuestionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/basic_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/votes_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/votes"
            android:textColor="@color/light_focused_text"
            android:textSize="14sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_thumbs_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <View
            android:id="@+id/divider7"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/askit_gray_light"
            app:layout_constraintEnd_toEndOf="@+id/questions_subject_textview"
            app:layout_constraintStart_toStartOf="@+id/questions_subject_textview"
            app:layout_constraintTop_toBottomOf="@+id/category_title_textview" />

        <TextView
            android:id="@+id/questions_subject_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/subject"
            android:textColor="@color/light_focused_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/category_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawablePadding="4dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/category"
            android:textColor="@color/light_focused_text"
            android:textSize="14sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_th"
            app:layout_constraintStart_toStartOf="@+id/questions_subject_textview"
            app:layout_constraintTop_toBottomOf="@+id/questions_subject_textview" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/askit_gray_light"
            app:layout_constraintEnd_toEndOf="@+id/html_text_webview"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/html_text_webview"
            app:layout_constraintTop_toBottomOf="@+id/html_text_textview" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/point_separator"
            android:textColor="@color/askit_gray_dark"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/category_title_textview"
            app:layout_constraintStart_toEndOf="@+id/category_title_textview"
            app:layout_constraintTop_toTopOf="@+id/category_title_textview" />

        <TextView
            android:id="@+id/username_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:drawablePadding="4dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/username"
            android:textColor="@color/light_focused_text"
            android:textSize="12sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_user"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/point_separator"
            android:textColor="@color/askit_gray_dark"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/username_textview"
            app:layout_constraintStart_toEndOf="@+id/username_textview"
            app:layout_constraintTop_toTopOf="@+id/username_textview" />

        <TextView
            android:id="@+id/question_time_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:drawablePadding="4dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/time"
            android:textColor="@color/light_focused_text"
            android:textSize="12sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_clock"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.0" />


        <WebView
            android:id="@+id/html_text_webview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider7" />

        <ImageButton
            android:id="@+id/up_vote_imagebutton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/button_shape"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_thumbs_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <ImageButton
            android:id="@+id/down_vote_imagebutton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_shape"
            android:padding="8dp"
            android:rotationY="180"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_thumbs_down"
            app:layout_constraintBottom_toBottomOf="@+id/up_vote_imagebutton"
            app:layout_constraintStart_toEndOf="@+id/up_vote_imagebutton"
            app:layout_constraintTop_toTopOf="@+id/up_vote_imagebutton" />

        <TextView
            android:id="@+id/html_text_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/html_text_webview" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <TextView
        android:id="@+id/answers_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/answers"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/divider8"
        app:layout_constraintEnd_toEndOf="@+id/divider8"
        app:layout_constraintStart_toStartOf="@+id/divider8"
        app:layout_constraintTop_toTopOf="@+id/divider8" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="400dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider8">

    </androidx.recyclerview.widget.RecyclerView>

    <EditText
        android:id="@+id/logs_textview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>